--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -28,7 +28,7 @@ jobs:
           git config --global user.name 'GitHub Actions - update content'
           git config --global user.email 'actions@github.com'
           git add --all content
-          git commit -am "Auto updated content submodule" && git push || echo "No changes to commit"
+          git commit -am "Auto updated content submodule at $(date '+%Y-%m-%d-%H-%M-%S')" || echo "No changes to commit"
       - name: Push changes
         run: |
           git push
